--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-        <link rel="icon" type="image/png" href="img/logo.png">
+    <link rel="icon" type="image/png" href="img/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>register</title>
     <link rel="stylesheet" href="css/bootstrap-rtl.min.css">
@@ -31,6 +31,22 @@
                         <p class="main-disc">من فضلك قم بإدخال البيانات التاليه</p>
                     </div>
 
+                    <div class="d-flex align-items-center justify-content-center multi-btns tabsBtns">
+                        <button type="button" class="custom-btn sm single_btn_tab active" data-link="first_status">
+                            <p class="bt-text">مشاغل</p>
+                        </button>
+
+                        <button type="button" class="custom-btn sm single_btn_tab" data-id="sec_status">
+                            <p class="bt-text">افراد</p>
+                        </button>
+
+                        <!-- <div class="first_status">11111111</div>
+                        <div class="sec_status d-none">22222</div> -->
+
+
+                    </div>
+
+
                     <div class="form-group">
                         <label for="" class="label">رقم الجوال</label>
                         <input type="number" class="main-input" placeholder="من فضلك ادخل رقم الجوال">
@@ -46,7 +62,7 @@
                         <input type="email" class="main-input" placeholder="من فضلك ادخل البريد الالكتروني">
                     </div>
 
-                    <div class="form-group select-2-input edit-select">
+                    <div class="form-group select-2-input edit-select sec_status d-none">
                         <label for="" class="label">المدينة</label>
                         <select name="" id="" class="select">
                             <option value="" selected disabled>من فضلك اختر المدينة</option>
@@ -56,7 +72,7 @@
                         </select>
                     </div>
 
-                    <div class="form-group select-2-input edit-select">
+                    <div class="form-group select-2-input edit-select sec_status d-none">
                         <label for="" class="label">الحي</label>
                         <select name="" id="" class="select">
                             <option value="" selected disabled>من فضلك اختر الحي</option>
@@ -67,18 +83,17 @@
                     </div>
 
 
-                    <div class="single-img-uploader form-group">
-                        <label for="" class="label">صورة الهوية
-                        </label>
-                        <label class="upload-label-2 main-input">
-                            <input type="file" class="d-none">
-                            <span class="dn-input"></span>
-                            <i class="fas fa-camera icon"></i>
-                        </label>
-                        <div class="uploader_img"></div>
+                    <div class="form-group select-2-input edit-select">
+                        <label for="" class="label">النوع</label>
+                        <select name="" id="" class="select">
+                            <option value="" selected disabled>من فضلك اختر النوع</option>
+                            <option value="">test</option>
+                            <option value="">test</option>
+                            <option value="">test</option>
+                        </select>
                     </div>
 
-                    <div class="single-img-uploader form-group">
+                    <div class="single-img-uploader form-group first_status">
                         <label for="" class="label">صورة المشغل
                         </label>
                         <label class="upload-label-2 main-input">
@@ -89,8 +104,37 @@
                         <div class="uploader_img"></div>
                     </div>
 
-                    <div class="single-img-uploader form-group">
-                        <label for="" class="label">صورة السجل التجاري
+
+                    <div class="form-group first_status">
+                        <label for="" class="label">سعر تكلفة المنزل</label>
+                        <input type="number" class="main-input" placeholder="من فضلك ادخل سعر التكلفة">
+                    </div>
+
+
+                    <div class="single-img-uploader form-group sec_status d-none">
+                        <label for="" class="label">صورة الهوية
+                        </label>
+                        <label class="upload-label-2 main-input">
+                            <input type="file" class="d-none">
+                            <span class="dn-input"></span>
+                            <i class="fas fa-camera icon"></i>
+                        </label>
+                        <div class="uploader_img"></div>
+                    </div>
+
+                    <div class="single-img-uploader form-group sec_status d-none">
+                        <label for="" class="label">صورة اللوجو
+                        </label>
+                        <label class="upload-label-2 main-input">
+                            <input type="file" class="d-none">
+                            <span class="dn-input"></span>
+                            <i class="fas fa-camera icon"></i>
+                        </label>
+                        <div class="uploader_img"></div>
+                    </div>
+
+                    <div class="single-img-uploader form-group sec_status d-none">
+                        <label for="" class="label">صورة رخصه مزولة مهنه
                         </label>
                         <label class="upload-label-2 main-input">
                             <input type="file" class="d-none">
@@ -108,6 +152,11 @@
                     <div class="form-group">
                         <label for="" class="label">رقم الايبان</label>
                         <input type="number" class="main-input" placeholder="من فضلك ادخل رقم الايبان">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="" class="label">رقم الحساب</label>
+                        <input type="number" class="main-input" placeholder="من فضلك ادخل رقم الحساب">
                     </div>
 
                     <div class="form-group">
@@ -157,7 +206,8 @@
                                 <span class="span-check"><i class="fas fa-check"></i></span>
                             </div>
                         </label>
-                        <span class="hint-inner-text"><a href="terms-and-conditions.html" class="link">قرات ووافقت علي الشروط والاحكام</a></span>
+                        <span class="hint-inner-text"><a href="terms-and-conditions.html" class="link">قرات ووافقت علي
+                                الشروط والاحكام</a></span>
                     </div>
 
                     <button type="submit" class="custom-btn w-100 mt-3 mb-3">
@@ -174,6 +224,8 @@
             <img src="img/logo.png" alt="">
             <span class="load"></span>
         </div>
+
+
 
     </section>
     <!--======================== end content ================================-->
@@ -204,12 +256,31 @@
                     $(this).siblings(".main-input").attr("type", "password");
                 }
             });
+
         })
     </script>
 
     <script>
+        $(document).ready(function () {
 
 
+
+            $(document).on('click', ".single_btn_tab", function () {
+                $(".single_btn_tab").removeClass('active')
+                $(this).addClass('active')
+                let dataId = $(this).data('id')
+                let datalink = $(this).data('link')
+                if (datalink) {
+                    $(".first_status").removeClass('d-none')
+                    $(".sec_status").addClass('d-none')
+
+                } else if(dataId) {
+                    $(".first_status").addClass('d-none')
+                    $(".sec_status").removeClass('d-none')
+                }
+
+            })
+        })
     </script>
 </body>
 
