--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-        <link rel="icon" type="image/png" href="img/logo.png">
+    <link rel="icon" type="image/png" href="img/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>login</title>
     <link rel="stylesheet" href="css/bootstrap-rtl.min.css">
@@ -16,7 +16,251 @@
     <!-- this is not a global file -->
     <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
 
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+
+    <style>
+        body {
+            overflow-x: hidden;
+        }
+        input[type="number"]::-webkit-inner-spin-button,
+        input[type="number"]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+        }
+
+        .custom-btn:hover,
+        .custom-btn:hover .bt-text {
+            color: #0f1922;
+            background-color: transparent;
+        }
+
+        .custom-form .head-form {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        .custom-form .head-form .form-logo {
+            height: 85px;
+            object-fit: cover;
+            margin-bottom: 20px;
+        }
+
+        @media (max-width: 550px) {
+            .custom-form .head-form .form-logo {
+                height: 70px;
+            }
+        }
+
+        .main-input {
+            width: 100%;
+            height: 50px;
+            border: 1px solid #dddddd;
+            border-radius: 5px;
+            display: flex;
+            align-items: center;
+            padding: 10px 20px;
+            box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.16);
+        }
+
+        .main-input::placeholder {
+            font-size: 14px;
+            color: #515151;
+        }
+
+        .custom-layout {
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 4px gray;
+        }
+
+        .auth-background {
+            background-color: #c4615e;
+            padding: 40px 0;
+            overflow-y: auto;
+            height: 100vh;
+        }
+
+        @media (max-width: 768px) {
+            .auth-background {
+                padding: 80px 0;
+            }
+        }
+
+        .auth-background.default-height {
+            height: auto;
+        }
+
+        .custom-form-width {
+            width: 620px;
+            max-width: 100%;
+            margin: 0 auto;
+        }
+
+        .custom-form .head-form .form-logo {
+            height: 110px;
+            object-fit: cover;
+            margin-bottom: 20px;
+        }
+
+        .form-padding {
+            padding: 25px 30px;
+        }
+
+        .form-group {
+            margin-bottom: 30px;
+        }
+
+        .label {
+            display: block;
+            font-size: 15px;
+            font-weight: bold;
+            margin-bottom: 12px;
+        }
+
+        @media (max-width: 550px) {
+            .label {
+                font-size: 13px;
+            }
+        }
+
+        @media (max-width: 550px) {
+            .form-padding {
+                padding: 25px 15px;
+            }
+        }
+
+        @media (max-width: 550px) {
+            .custom-form .head-form .form-logo {
+                height: 70px;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .auth-background {
+                padding: 80px 0;
+            }
+        }
+
+        .password-group,
+        .main-input {
+            position: relative;
+        }
+
+        .password-group .icon,
+        .main-input .icon {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #bfbfbf;
+            font-size: 20px;
+        }
+
+        html[lang=en] .password-group .icon,
+        html[lang=en] .main-input .icon {
+            right: 12px;
+        }
+
+        html[lang=ar] .password-group .icon,
+        html[lang=ar] .main-input .icon {
+            left: 12px;
+        }
+
+        .password-group .icon.active::after,
+        .main-input .icon.active::after {
+            content: "";
+            position: absolute;
+            background-color: #000;
+            width: 1px;
+            height: 23px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(45deg);
+        }
+
+        @media (max-width: 550px) {
+
+            .password-group .icon,
+            .main-input .icon {
+                font-size: 16px;
+            }
+        }
+
+        .f-password {
+            display: block;
+            text-align: end;
+            font-size: 12px;
+            color: #ababab;
+            margin-bottom: 30px;
+        }
+
+        .custom-btn {
+            border: 0;
+            min-width: 220px;
+            min-height: 40px;
+            padding: 13px 10px;
+            border-radius: 6px;
+            line-height: 20px;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 15px;
+            transition: all 0.5s ease-in-out;
+            overflow: hidden;
+            position: relative;
+            /* background-image: linear-gradient(to top, #e13510, #e13510); */
+            box-shadow: 0 0 3px rgba(20, 36, 68, 0.5);
+            color: #fff;
+            background: #c4615e;
+        }
+
+        .custom-btn .bt-text {
+            z-index: 2;
+            position: relative;
+            color: #fff;
+            font-size: 15px;
+            transition: all 0.5s ease-in-out;
+            margin-bottom: 0;
+        }
+
+        .custom-btn span {
+            position: absolute;
+            display: block;
+            width: 0;
+            height: 0;
+            border-radius: 50%;
+            background-color: #fff;
+            -webkit-transform: translate(-30%, 35%);
+            transform: translate(-30%, 35%);
+            z-index: 1;
+            left: 0;
+            right: auto;
+            transition: 0.5s ease-in-out !important;
+            bottom: 0;
+            opacity: 0;
+        }
+
+        .custom-btn:hover span {
+            width: 250%;
+            height: 250px;
+            opacity: 1;
+        }
+
+        .new-sign {
+            display: block;
+            text-align: center;
+            font-size: 14px;
+            color: #000;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        .new-sign a {
+            color: #e13510;
+            text-decoration: underline !important;
+            margin-inline-start: 5px;
+        }
+    </style>
 </head>
 
 
@@ -58,10 +302,10 @@
         </div>
 
         <!-- ============================ start loader ========================== -->
-        <div class="loader">
+        <!-- <div class="loader">
             <img src="img/logo.png" alt="">
             <span class="load"></span>
-        </div>
+        </div> -->
 
     </section>
     <!--======================== end content ================================-->
